[package]
name = "hdfs-log-reader"
version = "0.1.0"
edition = "2024"

[workspace]

[[bin]]
name = "hdfs-log-reader"
path = "src/main.rs"

[dependencies]
anyhow = "1.0"
clap = { version = "4.5", features = ["derive"] }
mysql_async = "0.32"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.28", features = ["full"] }